[add] - person entity deleting data endpoint implemented

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@
 spring.datasource.url=jdbc:h2:mem:javaee9db
 
 spring.jpa.defer-datasource-initialization=true
+
+# show generated sql queries
+spring.jpa.show-sql=true
